Fix input background color in dark mode

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -36,7 +36,7 @@ input {
   padding: 1px 5px;
   color: #161616;
   .dark-mode & {
-    background-color: #444;
+    background-color: #161616;
     border-color: #777;
     color: #f0f0f0;
   }
